COMPLETED/Mahamed-Bashir-Armageddon/LAB1/c/bonuses_a_to_f/modules/security/06-sg-alb.tf
resource "aws_security_group" "alb_sg" {
  name        = "alb-${var.name_prefix}"
  description = "ALB Public Ingress"
  vpc_id      = var.vpc_id

  tags = { Name = "sg-alb-${var.name_prefix}" }
}

resource "aws_vpc_security_group_ingress_rule" "alb_http" {
  security_group_id = aws_security_group.alb_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  to_port           = 80
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_ingress_rule" "alb_https" {
  security_group_id = aws_security_group.alb_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "alb_all_outbound" {
  security_group_id = aws_security_group.alb_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}
